# reComm

./: CMakeLists.txt  README.md  main.cpp
application/: UserService.h
backend/: API_AUTH.md  API_GROUPS.md  API_OVERVIEW.md  API_REGISTER.md  CMakeLists.txt  README.md  main.cpp
backend/application/: AuthRequestService.h  FriendshipService.h  JwtService.h  RegisterRequestService.h  RequestHandleService.h  UserService.h
backend/application/request_handlers/: AuthRequestService.h  RegisterRequestService.h  RequestHandleService.h
backend/domain/friendship/: FriendshipRepository.h
backend/domain/user/: UserRepository.h
backend/exceptions/: invalid_credentials_error.h  unknown_method_error.h  user_already_exists_error.h
backend/infrastructure/: FileFriendshipRepository.h  FileUserRepository.h
backend/src/application/: FriendshipService.h  GroupService.h  JwtService.h  MessageService.h  NotificationService.h  UserService.h
backend/src/application/request_handlers/: AuthRequestService.h  FriendRequestService.h  GroupRequestService.h  MessageRequestService.h  RegisterRequestService.h  RequestHandleService.h  RequestService.h
backend/src/domain/friendship/: Friendship.h
backend/src/domain/group/: Group.h  GroupRepository.h
backend/src/domain/message/: Message.h  MessageRepository.h
backend/src/domain/notification/: NotificationRepository.h
backend/src/exceptions/: already_friends_error.h  bad_request_format_error.h  cannot_add_non_friend_to_group_error.h  cannot_be_self_friend_error.h  cannot_leave_group_as_last_member_error.h  friendship_request_already_processed_error.h  friendship_request_already_sent_error.h  friendship_request_not_found_error.h  friendship_request_process_error.h  group_not_found_error.h  invalid_token_error.h  missing_required_field_error.h  not_group_member_error.h  save_friendship_request_error.h  unauthorized_error.h  user_already_exists_error.h  user_already_in_group_error.h  user_not_found_error.h
backend/src/infrastructure/: ConnectionManager.h  FileFriendshipRepository.h  FileGroupRepository.h  FileMessageRepository.h  FileNotificationRepository.h  FileUserRepository.h
backend/src/utils/: Logger.h
domain/: User.h  UserRepository.h
frontend/: DOKUMENTACJA.md  INSTALACJA_OPENSUSE.md  PYDANTIC_IMPLEMENTATION.md  README.md  build.sh  install_opensuse.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_api_client.py  test_models.py
frontend/gui/: login_window.py  main_window.py
frontend/gui/dialog/: add_friend.py  create_group.py  friend_request.py  group_settings.py
frontend/gui/widget/: chat.py  connection_indicator.py  group_item.py  message.py
frontend/src/: App.tsx  Home.tsx  LoginPage.tsx  RegisterPage.tsx  WebScoketProvider.tsx  app.py  main.tsx
frontend/src/components/: __init__.py  conversation_frame.py  conversation_list.py  conversations_bar.py  friend_requests_frame.py  gradient_text.py  group_actions_dialog.py  login_frame.py  main_screen.py  navbar.py  new_group_dialog.py  top_navbar.py
frontend/src/hooks/: useWebSocket.ts
frontend/src/pydantic_classes/api/: README.md  __init__.py  api_method.py  auth.py  base.py  examples.py  friendship.py  group.py  message.py  notification.py  type_hierarchy.py
frontend/src/pydantic_classes/data/: conversation.py  ui_subscribers.py
frontend/src/types/: api.ts
frontend/src/utils/: __init__.py  api_client.py  connection.py  data_store.py
frontend/tools/: api_service.py  tcp_client.py
infrastructure/: FileUserRepository.h
wiki/: API_FRIENDS.md  API_README.md
